[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.3.0"  # Keep up to date with versions in `Owned Crates` section below.
authors = ["Ed Younis <edyounis@lbl.gov>"]
edition = "2024"
description = "Accelerated and Extensible Quantum Library"
readme = "README.md"
repository = "https://github.com/OpenQudit/OpenQudit"
license = "BSD-3-Clause"
keywords = ["circuit", "gates", "instantiation", "quantum", "qudit"]
categories = [
  "compilers",
  "data-structures",
  "mathematics",
  "parser-implementations",
  "science"
]

[workspace.dependencies]
qudit-circuit = { path = "crates/qudit-circuit", version = "0.3.0" }
qudit-core = { path = "crates/qudit-core", version = "0.3.0" }
qudit-expr = { path = "crates/qudit-expr", version = "0.3.0" }
qudit-inst = { path = "crates/qudit-inst", version = "0.3.0" }
# Owned Crates
qudit-macros = { path = "crates/qudit-macros", version = "0.3.0" }
qudit-python = { path = "crates/qudit-python", version = "0.3.0" }
qudit-tensor = { path = "crates/qudit-tensor", version = "0.3.0" }

# Number
num = "0.4.3"
num-complex = "0.4"
num-traits = "0.2"
ordered-float = "5.1.0"

faer = {
  version = "0.23.2",
  default-features = false,
  features = ["rand", "std"]
}
faer-traits = "0.23.2"
# Linalg
nano-gemm = "0.1.3"

inventory = { version = "0.3.21" }
numpy = { version = "0.29.0" }
# Python Support
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
pyo3-stub-gen = { version = "0.23.0" }

# LLVM/Compilation
egg = "0.10.0"
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
llvm-sys = "211.0.0"

# Data Structures
aligned-vec = "0.6.4"
bit-set = "0.8.0"
indexmap = "2.12.0"
rustc-hash = "2.1.1"
slotmap = { version = "1.0.7", features = ["serde"] }

# Utilities
bytemuck = "1.24.0"
coe-rs = "0.1.2"
dyn-clone = "1.0"
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = "0.5"
thiserror = "2.0"

# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }

# Testing
proptest = "1.9"

# Benchmarking
criterion = "0.5"
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }

[workspace.lints.clippy]
approx_constant = "allow"
collapsible_if = "allow"
missing_transmute_annotations = "allow"
module_inception = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"
upper_case_acronyms = "allow"

[profile.bench]
inherits = "release"
strip = false

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1
